--- a/WindowsFormsApp4/packages.config
+++ b/WindowsFormsApp4/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net452" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
 </packages>
